# VkBotGame

./: .env  .env.test  .gitignore  README.md  bot.py  config.py  database.db  database_exel.xlsx  database_exel_test.xlsx  requirements.txt
Arduino/ArduinoCodePrevious/: ArduinoCodePrevious.ino
data/: group.py  keyboard.py  partOneMessage.py  partTwoMessage.py
database/: aiodb.py  db.py  settings.py
handlers/: __init__.py  admin.py  chat.py  check.py  partOne.py  partTwo.py  ping.py  welcome.py
necessary/: index.php
necessary/comport_scanner-master/: .gitignore  config.py  emulate.py  main.py  pyproject.toml  Запустить программу для сканеров.bat
states/: mystates.py
